Worked on api rate limiting